created PigLatin function

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "morse-code-converter": "^1.0.2"
+    "awesome-dev-jokes": "^1.0.3",
+    "morse-code-converter": "^1.0.2",
+    "pig-latin": "^2.0.2"
   },
   "devDependencies": {},
   "main": "index.js",
