--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "morse-code-converter": "^1.0.2",
+    "node-fetch": "^2.6.1",
     "parse-multipart": "^1.0.4"
   },
   "devDependencies": {},
