--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "morse-code-converter": "^1.0.2",
     "node-fetch": "^2.6.1",
-    "parse-multipart": "^1.0.4"
+    "parse-multipart": "^1.0.4",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {},
   "main": "index.js",
