--- a/song4u/package.json
+++ b/song4u/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "query-string": "^7.0.1",
     "querystring": "^0.2.1"
   },
   "devDependencies": {},
