--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "morse-code-converter": "^1.0.2",
     "node-fetch": "^2.6.1",
     "parse-multipart": "^1.0.4",
+    "query-string": "^7.0.1",
     "querystring": "^0.2.1"
   },
   "devDependencies": {},
