starter template bunni repo

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.2.1",
     "morse-code-converter": "^1.0.2",
     "node-fetch": "^2.6.1",
     "parse-multipart": "^1.0.4",
