--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
-  "name": "intro-to-serverless",
+  "name": "serverless-week-1",
   "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
+  "description": "![Newsletter](https://user-images.githubusercontent.com/69332964/114803220-14269100-9d6d-11eb-9a3a-e92a637e5d79.png)",
+  "main": "index.js",
+  "dependencies": {
+    "morse-code-converter": "^1.0.2",
+    "node-fetch": "^2.6.1",
+    "parse-multipart": "^1.0.4",
+    "query-string": "^7.0.1",
+    "querystring": "^0.2.1"
   },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/paryswest/serverless-week-1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/paryswest/serverless-week-1/issues"
+  },
+  "homepage": "https://github.com/paryswest/serverless-week-1#readme"
 }
