--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![Newsletter](https://user-images.githubusercontent.com/69332964/114803220-14269100-9d6d-11eb-9a3a-e92a637e5d79.png)",
   "main": "index.js",
   "dependencies": {
+    "@azure/storage-blob": "^12.2.1",
     "morse-code-converter": "^1.0.2",
     "node-fetch": "^2.6.1",
     "parse-multipart": "^1.0.4",
