--- a/package.json
+++ b/package.json
@@ -1,30 +1,11 @@
 {
-  "name": "serverless-week-1",
+  "name": "intro-to-serverless",
   "version": "1.0.0",
-  "description": "![Newsletter](https://user-images.githubusercontent.com/69332964/114803220-14269100-9d6d-11eb-9a3a-e92a637e5d79.png)",
-  "main": "index.js",
-  "dependencies": {
-    "@azure/cosmos": "^3.12.0",
-    "@azure/storage-blob": "^12.2.1",
-    "morse-code-converter": "^1.0.2",
-    "node-fetch": "^2.6.1",
-    "parse-multipart": "^1.0.4",
-    "query-string": "^7.0.1",
-    "querystring": "^0.2.1"
-  },
-  "devDependencies": {},
+  "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/paryswest/serverless-week-1.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/paryswest/serverless-week-1/issues"
-  },
-  "homepage": "https://github.com/paryswest/serverless-week-1#readme"
+  "dependencies": {},
+  "devDependencies": {}
 }
